projects/compiler/test/lexer/ints_error_invalid_hex_first.out
Error at %FILE_NAME%:1:3
Unexpected character 'q':
  |  0xq
       ^